# halo2

./: .env.example  .env.local  .gitignore  API_V2_GUIDE.md  ARCHITECTURE_VALIDATION.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  POLICY_CHAIN_README.md  README_ARCHITECTURE.md  design_1.md  flow1.md  pyproject.toml  test_agnostic_architecture.py  test_function_gemma.py  test_functiongemma_simple.py  test_policy_chain.py  test_v2_api.sh  tidy-noodling-candy.md
config/: care.json  home.json
data/: functiongemma_training.jsonl  golden_dataset.jsonl
data/halo/care/: README.md
data/halo/home/: README.md
flows/examples/: smart_home_flows.py
functionGemma/: finetuning-with-functiongemma.md  finetuning_with_functiongemma.ipynb  finetuning_with_functiongemma_mobile_actions.ipynb  function_gemma.md  mobile-actions.md
gemini_api/: gemini_api.md  gemini_prompting.md
others/: SmolLM2_360M_Instruct.ipynb  comparar_todos.py  gemma.md
roadmap/resumenes/: resumen.md
scenarios/context_inheritance/: anaphora_resolution.yaml
scenarios/flows/: scene_setup_complete.yaml
scenarios/learning/: determinism_test.yaml
scripts/: convert_golden_to_fg.py  finetune_functiongemma.py  setup_gemini.sh  show_gemini_config.py
src/halo/: config.py
test/: scenario_tester.py  test_conversation_context.py  test_functiongemma_converter.py  test_gemini_agent.py  test_gemini_classifier.py  test_model_config.py  test_process_engine.py  test_scenario_e2e.py  test_spacy_slot_filler.py  test_vocabulary_expansion.py
test/scenarios/: conversation_flows.yaml  edge_cases.yaml
(+78 files in other folders)
